--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3"
 services:
   neovim:
     image: devenv
+    ports:
+      - 5173:5173
     container_name: devflow 
     tty: true
     volumes:
